Fix link to getting started

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/oicana.svg
   actions:
     - text: Get started
-      link: https://docs.oicana.com/getting-started
+      link: https://docs.oicana.com/getting-started/1-setup
       icon: right-arrow
 ---
 
